style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,500&display=swap');

* {
    box-sizing: border-box;
}

html {
    height: 100%;
}

html, body, fieldset, ul {
    margin: 0;
    padding: 0;
    overscroll-behavior: none;
    font-family: 'Roboto', sans-serif;
}

.main-container {
    display: flex;
    gap: 42px;
}

span.italic {
    font-style: italic;
}

.top-content {
    height: 530px;
}

.top-content p {
    font-weight: 500;
    font-size: 24px;
}
.top-content > p:first-child {
    margin-top: 55px;
    margin-bottom: 0;
}
.top-content > p:nth-child(2) {
    margin-top: 0;
}

.text-container {
    width: 52vw;
}

.background-image img {
    min-height: 100%;
    width: 34vw;
    position: relative;
    text-align: center;
}

.credits {
    position: absolute;
    bottom: -80px;
    left: 7%;
    color: white;
}

.credits > a {
    color: white;
}

.background-image {
    margin: 0;
    padding: 0;
}

fieldset {
    border: 0;
}

fieldset > p {
    margin: 44px 0 0;
}

ul {
    list-style: none;
    display: flex;
    flex-wrap: wrap;

}

label {
    display: block;
    font-size: small;
    font-weight: 400;
    padding: 2px;
}

li {
    width: 25vw;
    padding: 30px 65px 0 0;
}

input {
    width: 100%;
    height: 30px;
    padding: 3px 9px;
    font-size: 16px;
    border-radius: 5px;
    border: 1px solid #E5E7EB;
}

input:focus {
    border: 2px solid blue;
    box-shadow: 2px 3px gray;
}

input:invalid {
    border: 2px solid red;
}

button {
    width: 225px;
    height: 45px;
    font-size: 16px;
    font-weight: bold;
    border-radius: 10px;
    background-color: #596D48;
    border: 1px solid #596D48;
    color: white;
    cursor: pointer;
}

.create-account {
    padding-top: 60px;
}

.create-account p {
    font-size: large;
}

button,
input,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
}

a {
    color: #596D48;
}

